[package]
name = "signal"
version = "0.1.0"
edition = "2021"
authors = ["scPointer <jax01@foxmail.com>"]

[dependencies]
kernel-context = { git = "https://github.com/shiwenlong12/kernel-context" }
signal-defs = { git = "https://github.com/shiwenlong12/signal-defs" }

[features]
kernel = []
user = []